--- a/public/stylesheets/ev-services.css
+++ b/public/stylesheets/ev-services.css
@@ -1,5 +1,6 @@
 .slogan {
-    background-image: linear-gradient(to right, var(--code-green), var(--health-blue));
+    background-image: linear-gradient(45deg, var(--code-green), var(--health-blue));
+    display: inline-block;
     font-family: Roboto;
     font-size: 8.0rem;
     /*font-weight: normal;*/
