Connect contact form

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -148,17 +148,17 @@
     <div class="w3-row">
       <div class="w3-col m8 l8">
         <h2 class="section--title">Connect</h2>
-        <form action="/action_page.php" target="_blank">
+        <form action="/contact" method="post" target="_blank">
           <label class="w3-text-health-blue ev-connect-label w3-padding-16" for="nameForm">Name</label>
           <input class="w3-input w3-section w3-border-0 w3-dark w3-text-white" type="text"
-                 placeholder="Name" required name="Name" id="nameForm">
+                 placeholder="Name" required name="name" id="nameForm">
           <label class="w3-text-health-blue ev-connect-label w3-margin-top" for="emailForm">Email</label>
           <input class="w3-input w3-section w3-border-0 w3-dark" type="email" placeholder="Email" required
                  name="Email" id="emailForm">
           <label class="w3-text-health-blue ev-connect-label" for="messageForm">Message</label>
           <textarea class="w3-input w3-section w3-border-0 w3-dark" rows="10" type="text"
                     placeholder="Personal message..." required
-                    name="Subject" id="messageForm"></textarea>
+                    name="message" id="messageForm"></textarea>
           <button class="w3-button w3-black w3-section w3-code-green w3-text-dark-two" type="submit">
             SEND MESSAGE
           </button>
