Fix line drawing and indent headers

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -60,7 +60,14 @@
     <div class="w3-container" style="margin-bottom: 90px;">
       <div class="w3-row">
         <div class="w3-col m8 l8">
-          <div class="slogan">Engage <br/> Explore <br/> Evolve</div>
+          <div class="slogan" style="display: inline-block;">
+            <span>Engage</span>
+            <br/>
+            <span style="margin-left: 100px;">Explore</span>
+            <br/>
+            <span style="margin-left: 200px;">Evolve</span>
+          </div>
+
           <h2 class="section--title">Who We Are</h2>
           <p>
             The EarthVectors core team brings nearly 100 years of software engineering experience and 30
@@ -82,7 +89,7 @@
         </div>
         <div class="w3-col m4 l4">
           <img class=" w3-hide-small" src="images/ev-lines.svg"
-               style="width: 66rem; position: absolute; top: 35px; left: 580px;"/>
+               style="width: 45rem; position: absolute; top: 42px; left: 575px;"/>
         </div>
       </div>
       <div class="w3-row">
