--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -4,71 +4,65 @@
   <title>EarthVectors</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="stylesheets/w3.css"/>
   <link rel="stylesheet" href="stylesheets/ev.css"/>
   <link rel="stylesheet" href="stylesheets/colors.css"/>
   <link rel="stylesheet" href="stylesheets/ev-services.css"/>
   <link href="https://fonts.googleapis.com/css?family=Muli|Roboto" rel="stylesheet">
-  <script type="application/javascript">
-    /* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
-    function myFunction() {
-      var x = document.getElementById("myTopnav");
-      if (x.className === "topnav") {
-        x.className += " responsive";
-      } else {
-        x.className = "topnav";
-      }
-    }
-  </script>
 </head>
-<body class="w3-dark-two">
-<div id="home" style="position: absolute; top: 0; left: 0;"></div>
+<body>
 
 <div class="screenwidth">
-
-  <div class="w3-container nav" style="border-bottom: 3px solid gray;">
+  <div class="w3-container nav">
     <div class="w3-row">
       <div class="w3-col l4">
         <a href="#home">
-          <img class="nav--logo" src="images/ev-logo-color.svg" alt="EarthVectors"/>
+          <img class="nav__logo" src="images/ev-logo-color.svg" alt="EarthVectors"/>
         </a>
       </div>
       <div class="w3-col l1">
         &nbsp;
       </div>
       <div class="w3-col l1">
-        <div class="nav--menu">
-          <a href="#home" class="nav--item">About</a>
+        <div class="nav__menu">
+          <a href="#home" class="nav__item">About</a>
         </div>
       </div>
       <div class="w3-col l1">
-        <div class="nav--menu">
-          <a href="#values" class="nav--item">Values</a>
+        <div class="nav__menu">
+          <a href="#values" class="nav__item">Values</a>
         </div>
       </div>
       <div class="w3-col l5">
-        <div class="nav--menu">
-          <a href="#contact" class="nav--item">Connect</a>
+        <div class="nav__menu">
+          <a href="#contact" class="nav__item">Connect</a>
         </div>
       </div>
     </div>
   </div>
-  <!-- Content -->
 
-  <!-- About -->
-  <div style="padding-top: 60px; margin-top: 60px; position: relative;">
-    <div class="w3-container" style="margin-bottom: 90px;">
+  <div style="position: relative;">
+    <img class="w3-hide-small" src="images/ev-lines.svg"
+         style="width: 45rem; position: absolute; top: 35px; left: 575px;"/>
+    <div class="w3-container section">
       <div class="w3-row">
-        <div class="w3-col m8 l8">
-          <div class="slogan" style="display: inline-block;">
-            <span>Engage</span>
+        <div class="w3-col m7 l7">
+          <div class="slogan w3-hide-small">
+            <span class="slogan__line1">Engage</span>
             <br/>
-            <span style="margin-left: 100px;">Explore</span>
+            <span class="slogan__line2">Explore</span>
             <br/>
-            <span style="margin-left: 200px;">Evolve</span>
+            <span class="slogan__line3">Evolve</span>
+          </div>
+          <div class="slogan w3-hide-medium w3-hide-large">
+            <span class="slogan__line1">Engage</span>
+            <br/>
+            <span class="slogan__line1">Explore</span>
+            <br/>
+            <span class="slogan__line1">Evolve</span>
           </div>
 
-          <h2 class="section--title">Who We Are</h2>
+          <h2 class="section__title">Who We Are</h2>
           <p>
             The EarthVectors core team brings nearly 100 years of software engineering experience and 30
             years of experience in the healthcare domain.
@@ -87,97 +81,108 @@
             processes.
           </p>
         </div>
-        <div class="w3-col m4 l4">
-          <img class=" w3-hide-small" src="images/ev-lines.svg"
-               style="width: 45rem; position: absolute; top: 42px; left: 575px;"/>
-        </div>
       </div>
       <div class="w3-row">
-        <div class="w3-col m8 l8">
-          <p class="core-practices--item" style="margin-top: 40px;">OUR PRACTICES</p>
-          <p class="core-practices--item">Test Driven Development</p>
-          <p class="core-practices--item">Pair Programming</p>
-          <p class="core-practices--item">Short Feedback Loops</p>
-          <p class="core-practices--item">Iterative Processes</p>
-          <p class="core-practices--item">Experimentation</p>
+        <div class="w3-col m8 l8 core-practices">
+          <div class="core-practices__item">OUR PRACTICES</div>
+          <div class="core-practices__item">Test Driven Development</div>
+          <div class="core-practices__item">Pair Programming</div>
+          <div class="core-practices__item">Short Feedback Loops</div>
+          <div class="core-practices__item">Iterative Processes</div>
+          <div class="core-practices__item">Experimentation</div>
         </div>
       </div>
     </div>
   </div>
 
-
-  <!-- Values -->
-  <div class="w3-container callout" id="values">
-    <div class="w3-row">
-      <div class="w3-col m8 l8">
-        <h2 class="callout--title">Our Core Values</h2>
-        <p class="values-title">Agility</p>
-        <p class="values">
-          We adhere strongly, but not dogmatically, to the tenants of the Agile Manifesto, Twelve
-          Principles of Agile Software, and Five Values of Extreme Programming. We adapt our process to minimize
-          ceremony and maximize communication, efficiency and happiness.
-        </p>
-        <p class="values-title">Pragmatic Idealism</p>
-        <p class="values">
-          We believe in continually evolving towards a set of ideals and dream
-          of all the possibilities they can bring. Ideals define our long term strategies.
-          Pragmatism defines our day-to-day tactics. Our ideals
-          and business needs are constantly evolving and we adjust accordingly.
-        </p>
-        <p class="values-title">Problem Solving</p>
-        <p class="values">
-          We make practical (often boring) technology choices. We don’t build science projects just
-          because we are smart enough to build them. New technologies should be chosen based on the merits of solving
-          the problem at hand.
-        </p>
-        <p class="values-title">Communication</p>
-        <p class="values">
-          We believe that many problems can be addressed through better communication. We do not hoard
-          information. We share our process and ideals freely and openly. We strive to be fearlessly
-          transparent with ourselves, our team members, and our clients.
-        </p>
-        <p class="values-title">Humility</p>
-        <p class="values">
-          We check our egos at the door. A codebase is owned by all team members, from the best features,
-          and most elegant implementations, to the worst bugs. We make mistakes sometimes, because we’re
-          human, but rather than dwell on them we choose to fix and then learn from them.
-        </p>
-      </div>
-      <div class="w3-col m4 l4 w3-hide-small" style="text-align: center;">
-        <img class="ev-footer-image" src="images/ev-group.svg"
-             style="width: 40rem; height: 40rem; padding-top: 122px; margin-top: 100px;"/>
-      </div>
-    </div>
-  </div>
-
-  <!-- Contact Section -->
-  <div class="w3-container" id="contact">
-    <div class="w3-row">
-      <div class="w3-col m8 l8">
-        <h2 class="section--title">Connect</h2>
-        <form action="/" method="post">
-          <label class="w3-text-health-blue ev-connect-label w3-padding-16" for="nameForm">Name</label>
-          <input class="w3-input w3-section w3-border-0 w3-dark w3-text-white" type="text"
-                 placeholder="Name" required name="name" id="nameForm">
-          <label class="w3-text-health-blue ev-connect-label w3-margin-top" for="emailForm">Email</label>
-          <input class="w3-input w3-section w3-border-0 w3-dark" type="email" placeholder="Email" required
-                 name="email" id="emailForm">
-          <label class="w3-text-health-blue ev-connect-label" for="messageForm">Message</label>
-          <textarea class="w3-input w3-section w3-border-0 w3-dark" rows="10" type="text"
-                    placeholder="Personal message..." required
-                    name="message" id="messageForm"></textarea>
-          <button class="w3-button w3-black w3-section w3-code-green w3-text-dark-two" type="submit">
-            SEND MESSAGE
-          </button>
-        </form>
-      </div>
-      <div class="w3-col m4 l4 w3-hide-small" style="text-align: center;">
-        <img class="ev-footer-image" src="images/ev-connect.svg" style="height: 80rem; margin-top: 40px;"/>
+  <div style="position: relative;">
+    <img class="w3-hide-small" src="images/ev-group.svg"
+         style="position: absolute; width: 30rem; height: 40rem; top: 270px; left: 695px;"/>
+    <div class="w3-container callout" id="values">
+      <div class="w3-row">
+        <div class="w3-col m8 l8">
+          <h2 class="callout__title">Our Core Values</h2>
+          <div class="value">
+            <p class="value__title">Agility</p>
+            <p class="value__text">
+              We adhere strongly, but not dogmatically, to the tenants of the Agile Manifesto, Twelve
+              Principles of Agile Software, and Five Values of Extreme Programming. We adapt our process to minimize
+              ceremony and maximize communication, efficiency and happiness.
+            </p>
+          </div>
+          <div class="value">
+            <p class="values-title">Pragmatic Idealism</p>
+            <p class="values">
+              We believe in continually evolving towards a set of ideals and dream
+              of all the possibilities they can bring. Ideals define our long term strategies.
+              Pragmatism defines our day-to-day tactics. Our ideals
+              and business needs are constantly evolving and we adjust accordingly.
+            </p>
+          </div>
+          <div class="value">
+            <p class="values-title">Problem Solving</p>
+            <p class="values">
+              We make practical (often boring) technology choices. We don’t build science projects just
+              because we are smart enough to build them. New technologies should be chosen based on the merits of
+              solving
+              the problem at hand.
+            </p>
+          </div>
+          <div class="value">
+            <p class="values-title">Communication</p>
+            <p class="values">
+              We believe that many problems can be addressed through better communication. We do not hoard
+              information. We share our process and ideals freely and openly. We strive to be fearlessly
+              transparent with ourselves, our team members, and our clients.
+            </p>
+          </div>
+          <div class="value">
+            <p class="values-title">Humility</p>
+            <p class="values">
+              We check our egos at the door. A codebase is owned by all team members, from the best features,
+              and most elegant implementations, to the worst bugs. We make mistakes sometimes, because we’re
+              human, but rather than dwell on them we choose to fix and then learn from them.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
-  <div class="w3-container" style="color: #1b252d; background-color: #209d75; margin-top: 122px; padding: 64px 0;">
+  <div style="position: relative;">
+    <img class="w3-hide-small" src="images/ev-connect.svg"
+         style="height: 68.1rem; position: absolute; top: 44px; left: 772px;"/>
+    <div class="w3-container section" id="contact">
+      <div class="w3-row">
+        <div class="w3-col m8 l8">
+          <h2 class="section__title">Connect</h2>
+          <form action="/" method="post">
+            <div class="form-element">
+              <label class="w3-text-health-blue ev-connect-label w3-padding-16" for="nameForm">Name</label>
+              <input class="w3-input w3-section w3-border-0 w3-dark w3-text-white" type="text"
+                     placeholder="Name" required name="name" id="nameForm">
+            </div>
+            <div class="form-element">
+              <label class="w3-text-health-blue ev-connect-label w3-margin-top" for="emailForm">Email</label>
+              <input class="w3-input w3-section w3-border-0 w3-dark" type="email" placeholder="Email" required
+                     name="Email" id="emailForm">
+            </div>
+            <div class="form-element">
+              <label class="w3-text-health-blue ev-connect-label" for="messageForm">Message</label>
+              <textarea class="w3-input w3-section w3-border-0 w3-dark" rows="10" type="text"
+                        placeholder="Personal message..." required
+                        name="message" id="messageForm"></textarea>
+            </div>
+            <button class="w3-button w3-code-green w3-text-dark-two" type="submit">
+              SEND MESSAGE
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="w3-container" style="color: #1b252d; background-color: #209d75; padding: 64px 0;">
     <div class="w3-row">
       <div class="w3-col w3-center">
         <img class="ev-footer-image" src="images/ev-logo-stacked.svg"/>
