Fix contact form

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -170,7 +170,7 @@
             <div class="form-element">
               <label class="w3-text-health-blue w3-margin-top" for="emailForm">Email</label>
               <input class="w3-input w3-section w3-border-0 w3-dark" type="email" placeholder="Email" required
-                     name="Email" id="emailForm">
+                     name="email" id="emailForm">
             </div>
             <div class="form-element">
               <label class="w3-text-health-blue" for="messageForm">Message</label>
