Fix logo link on nav bar
[#166392038]

--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -1,7 +1,7 @@
 <div class="w3-container nav">
   <div class="w3-row">
     <div class="w3-col l4">
-      <a href="#home">
+      <a href="/#home">
         <img class="nav__logo" src="images/ev-logo-color.svg" alt="EarthVectors"/>
       </a>
     </div>
