--- a/app/views/layouts/_nav_bar.html.erb
+++ b/app/views/layouts/_nav_bar.html.erb
@@ -25,7 +25,7 @@
     </div>
     <div>
       <div class="nav__menu">
-<!--        <a href="/blogs" class="nav__item">Blog</a>-->
+        <a href="/blogs" class="nav__item">Blog</a>
       </div>
     </div>
   </div>
