--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
   <link rel="stylesheet" href="assets/css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="assets/css/aos.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="stylesheets/style.css"/>
+<!--  <link rel="stylesheet" href="assets/css/style.css">-->
 
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
