--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -5,11 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css">
-  <link rel="stylesheet" href="assets/css/bootstrap-datepicker.css">
-  <link rel="stylesheet" href="assets/css/aos.css">
-  <link rel="stylesheet" href="stylesheets/style.css"/>
-<!--  <link rel="stylesheet" href="assets/css/style.css">-->
+  <link rel="stylesheet" href="external/stylesheets/css/jquery.fancybox.min.css">
+  <link rel="stylesheet" href="external/stylesheets/css/bootstrap-datepicker.css">
+  <link rel="stylesheet" href="external/stylesheets/css/aos.css">
+  <link rel="stylesheet" href="external/stylesheets/css/style.css"/>
 
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
