Move images to external folder

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -56,7 +56,7 @@
   </header>
 
 
-  <div class="site-blocks-cover overlay" style="background-image: url(assets/hero_2.jpg);" data-aos="fade">
+  <div class="site-blocks-cover overlay" style="background-image: url(external/images/hero_2.jpg);" data-aos="fade">
     <div class="container">
       <div class="row align-items-center justify-content-center">
 
@@ -86,7 +86,7 @@
     <div class="container">
       <div class="row align-items-lg-center">
         <div class="col-md-6 mb-5 mb-lg-0 position-relative">
-          <img src="assets/about_1.jpg" class="img-fluid" alt="Image">
+          <img src="external/images/about_1.jpg" class="img-fluid" alt="Image">
           <div class="experience">
             <span class="year">100 years</span>
             <span class="caption">of combined experience</span>
@@ -115,7 +115,7 @@
       <div class="row">
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
           <div class="person text-center">
-            <img src="assets/person_2.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
+            <img src="external/images/person_2.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
             <h3>John Rooster</h3>
             <p class="position text-muted">Co-Founder, President</p>
             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
@@ -131,7 +131,7 @@
         </div>
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
           <div class="person text-center">
-            <img src="assets/person_3.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
+            <img src="external/images/person_3.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
             <h3>Tom Sharp</h3>
             <p class="position text-muted">Co-Founder, COO</p>
             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
@@ -147,7 +147,7 @@
         </div>
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
           <div class="person text-center">
-            <img src="assets/person_4.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
+            <img src="external/images/person_4.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
             <h3>Winston Hodson</h3>
             <p class="position text-muted">Marketing</p>
             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
@@ -336,7 +336,7 @@
       <div class="row">
         <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
           <div class="h-entry">
-            <img src="assets/img_1.jpg" alt="Image" class="img-fluid">
+            <img src="external/images/img_1.jpg" alt="Image" class="img-fluid">
             <h2 class="font-size-regular"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
             <div class="meta mb-4">Ham Brook <span class="mx-2">&bullet;</span> Jan 18,
               2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
@@ -347,7 +347,7 @@
         </div>
         <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
           <div class="h-entry">
-            <img src="assets/img_2.jpg" alt="Image" class="img-fluid">
+            <img src="external/images/img_2.jpg" alt="Image" class="img-fluid">
             <h2 class="font-size-regular"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
             <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18,
               2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
@@ -358,7 +358,7 @@
         </div>
         <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
           <div class="h-entry">
-            <img src="assets/img_1.jpg" alt="Image" class="img-fluid">
+            <img src="external/images/img_1.jpg" alt="Image" class="img-fluid">
             <h2 class="font-size-regular"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
             <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18,
               2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
