--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -448,15 +448,15 @@
   </section>
 </div> <!-- .site-wrap -->
 
-<script src="assets/jquery_plugins/popper.min.js"></script>
-<script src="assets/jquery_plugins/jquery.stellar.min.js"></script>
-<script src="assets/jquery_plugins/jquery.countdown.min.js"></script>
-<script src="assets/jquery_plugins/bootstrap-datepicker.min.js"></script>
-<script src="assets/jquery_plugins/jquery.easing.1.3.js"></script>
-<script src="assets/jquery_plugins/jquery.fancybox.min.js"></script>
-<script src="assets/jquery_plugins/jquery.sticky.js"></script>
-<script src="assets/aos_init.js"></script>
-<script src="assets/main.js"></script>
+<script src="external/javascripts/jquery_plugins/popper.min.js"></script>
+<script src="external/javascripts/jquery_plugins/jquery.stellar.min.js"></script>
+<script src="external/javascripts/jquery_plugins/jquery.countdown.min.js"></script>
+<script src="external/javascripts/jquery_plugins/bootstrap-datepicker.min.js"></script>
+<script src="external/javascripts/jquery_plugins/jquery.easing.1.3.js"></script>
+<script src="external/javascripts/jquery_plugins/jquery.fancybox.min.js"></script>
+<script src="external/javascripts/jquery_plugins/jquery.sticky.js"></script>
+<script src="external/javascripts/aos_init.js"></script>
+<script src="external/javascripts/main.js"></script>
 
 </body>
 </html>
