--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -383,56 +383,38 @@
       </div>
       <div class="row">
         <div class="col-md-7 mb-5">
-          <form action="#" class="p-5 bg-white">
+          <%= form_tag(class: "p-5 bg-white") do %>
             <div class="row form-group">
               <div class="col-md-6 mb-3 mb-md-0">
-                <label class="text-black" for="fname">First Name</label>
-                <input type="text" id="fname" class="form-control">
-              </div>
-              <div class="col-md-6">
-                <label class="text-black" for="lname">Last Name</label>
-                <input type="text" id="lname" class="form-control">
+                <label class="text-black" for="nameForm">Name</label>
+                <input placeholder="Name" required name="name" id="nameForm" class="form-control">
               </div>
             </div>
 
             <div class="row form-group">
 
               <div class="col-md-12">
-                <label class="text-black" for="email">Email</label>
-                <input type="email" id="email" class="form-control">
-              </div>
-            </div>
-
-            <div class="row form-group">
-
-              <div class="col-md-12">
-                <label class="text-black" for="subject">Subject</label>
-                <input type="subject" id="subject" class="form-control">
+                <label class="text-black" for="emailForm">Email</label>
+                <input type="email" placeholder="Email" required name="email" id="emailForm" class="form-control">
               </div>
             </div>
 
             <div class="row form-group">
               <div class="col-md-12">
                 <label class="text-black" for="message">Message</label>
-                <textarea name="message" id="message" cols="30" rows="7" class="form-control" placeholder="Write your notes or questions here..."></textarea>
+                <textarea placeholder="Personal message..." required name="message" id="messageForm" cols="30" rows="7" class="form-control"></textarea>
               </div>
             </div>
 
             <div class="row form-group">
               <div class="col-md-12">
-                <input type="submit" value="Send Message" class="btn btn-primary btn-md text-white">
+                <%= invisible_recaptcha_tags text: "Send Message", class: "btn btn-primary btn-md text-white" %>
               </div>
             </div>
-
-
-          </form>
+          <% end %>
         </div>
 
-
-
         <div class="col-md-5">
-
-
           <div class="p-4 mb-3 bg-white">
             <p class="mb-0 font-weight-bold">Address</p>
             <p class="mb-4">780 Magnolia Street Denver CO, 80220</p>
@@ -441,7 +423,6 @@
             <p class="mb-0"><a href="#">info@earthvectors.com</a></p>
 
           </div>
-
         </div>
       </div>
     </div>
