--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="external/stylesheets/css/jquery.fancybox.min.css">
   <link rel="stylesheet" href="external/stylesheets/css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="external/stylesheets/css/aos.css">
-  <link rel="stylesheet" href="external/stylesheets/css/style.css"/>
+  <link rel="stylesheet" href="external/stylesheets/css/style.css" />
 
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -30,7 +30,8 @@
 
         <div class="col-6 col-xl-2">
           <h1 class="mb-0 site-logo">
-            <a href="/#home" class="text-black h2 mb-0"><img class="nav__logo" src="images/ev-logo-color.svg" alt="EarthVectors"/></a></h1>
+            <a href="/#home" class="text-black h2 mb-0"><img class="nav__logo" src="images/ev-logo-color.svg" alt="EarthVectors" /></a>
+          </h1>
         </div>
         <div class="col-12 col-md-10 d-none d-xl-block">
           <nav class="site-navigation position-relative text-right" role="navigation">
@@ -66,9 +67,9 @@
             <div class="col-md-6">
               <div class="slogan w3-hide-small">
                 <span class="slogan__line1">Engage</span>
-                <br/>
+                <br />
                 <span class="slogan__line2">Explore</span>
-                <br/>
+                <br />
                 <span class="slogan__line3">Evolve</span>
               </div>
               <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam assumenda ea quo
@@ -95,10 +96,15 @@
         <div class="col-md-5 ml-auto">
           <h3 class="section-sub-title">About Us</h3>
           <h2 class="section-title mb-3">Welcome To EarthVectors</h2>
-          <p class="mb-4">The EarthVectors core team brings nearly 100 years of software engineering experience and 30 years of experience in the healthcare domain.</p>
-          <p class="mb-4">Our former clients and employers span a wide range of business sizes, stages, and domains. We have helped for-profit and not-for-profit organizations create immense value.</p>
-          <p class="mb-4">We are experts in full stack engineering, software development practices, and business analysis. We have expertise in product management, project management, IT operations, DevOps, and data science. We pride ourselves on craftsmanship tempered with pragmatism.</p>
-          <p class="mb-4">Our mission is to create happiness and prosperity through common sense engineering and business processes.</p>
+          <p class="mb-4">The EarthVectors core team brings nearly 100 years of software engineering experience and 30
+            years of experience in the healthcare domain.</p>
+          <p class="mb-4">Our former clients and employers span a wide range of business sizes, stages, and domains. We
+            have helped for-profit and not-for-profit organizations create immense value.</p>
+          <p class="mb-4">We are experts in full stack engineering, software development practices, and business
+            analysis. We have expertise in product management, project management, IT operations, DevOps, and data
+            science. We pride ourselves on craftsmanship tempered with pragmatism.</p>
+          <p class="mb-4">Our mission is to create happiness and prosperity through common sense engineering and
+            business processes.</p>
         </div>
       </div>
     </div>
@@ -280,7 +286,8 @@
             <div class="unit-4-icon mr-4"><span class="text-primary icon-av_timer"></span></div>
             <div>
               <h3>Short Feedback Loops</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendiat.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae
+                eligendiat.</p>
             </div>
           </div>
         </div>
@@ -334,40 +341,27 @@
       </div>
 
       <div class="row">
-        <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-          <div class="h-entry">
-            <img src="external/images/img_1.jpg" alt="Image" class="img-fluid">
-            <h2 class="font-size-regular"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
-            <div class="meta mb-4">Ham Brook <span class="mx-2">&bullet;</span> Jan 18,
-              2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente
-              veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-            <p><a href="#">Continue Reading...</a></p>
+        <% @posts.each_with_index do |post, index| %>
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-name="blog-post-<%= index + 1 %>">
+            <div class="h-entry">
+              <img src="external/images/img_1.jpg" alt="Image" class="img-fluid">
+              <h2 class="font-size-regular">
+                <a href="<%= post[:link] %>" target="_blank">
+                  <%= post[:title] %>
+                </a>
+              </h2>
+              <div class="meta mb-4"><%= post[:creator] %><span class="mx-2">&bullet;</span>
+                <%= post[:date] %>
+              </div>
+              <p><%= post[:description] %></p>
+              <p>
+                <a href="<%= post[:link] %>" target="_blank">
+                  Continue Reading...
+                </a>
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-          <div class="h-entry">
-            <img src="external/images/img_2.jpg" alt="Image" class="img-fluid">
-            <h2 class="font-size-regular"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
-            <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18,
-              2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente
-              veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-            <p><a href="#">Continue Reading...</a></p>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
-          <div class="h-entry">
-            <img src="external/images/img_1.jpg" alt="Image" class="img-fluid">
-            <h2 class="font-size-regular"><a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a></h2>
-            <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18,
-              2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente
-              veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-            <p><a href="#">Continue Reading...</a></p>
-          </div>
-        </div>
-
+        <% end %>
       </div>
     </div>
   </section>
