--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,900" rel="stylesheet">
+  <link rel="stylesheet" href="external/fonts/icomoon/style.css">
+  <link rel="stylesheet" href="external/fonts/flaticon/font/flaticon.css">
   <link rel="stylesheet" href="external/stylesheets/css/jquery.fancybox.min.css">
   <link rel="stylesheet" href="external/stylesheets/css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="external/stylesheets/css/aos.css">
