Fix broken Values link in nav bar.

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -173,7 +173,7 @@
     </div>
   </section>
 
-  <section class="site-section">
+  <section class="values-section" id="values-section">
     <div class="container">
       <div class="row mb-5">
         <div class="col-12">
