Include vector image on main overaly

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -11,7 +11,14 @@
   <link rel="stylesheet" href="external/stylesheets/css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="external/stylesheets/css/aos.css">
   <link rel="stylesheet" href="external/stylesheets/css/style.css" />
-
+  <link rel="stylesheet" href="stylesheets/w3.css"/>
+  <link rel="stylesheet" href="stylesheets/colors.css"/>
+<!--  <link rel="stylesheet" href="stylesheets/ev.css"/>-->
+<!--  <link rel="stylesheet" href="stylesheets/container.css"/>-->
+<!--  <link rel="stylesheet" href="stylesheets/section.css"/>-->
+  <link rel="stylesheet" href="stylesheets/slogan.css"/>
+<!--  <link rel="stylesheet" href="stylesheets/values.css"/>-->
+<!--  <link rel="stylesheet" href="stylesheets/callout.css"/>-->
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
@@ -59,14 +66,11 @@
   </header>
 
 
-  <div class="site-blocks-cover overlay" style="background-image: url(external/images/hero_2.jpg);" data-aos="fade">
+  <div class="site-blocks-cover overlay slogan__overaly" data-aos="fade">
     <div class="container">
-      <div class="row align-items-center justify-content-center">
-
-        <div class="col-md-12" data-aos="fade-up" data-aos-delay="400">
-
-          <div class="row mb-4">
-            <div class="col-md-6">
+      <div class="row align-items-center">
+          <div class="row">
+            <div class="col-6">
               <div class="slogan w3-hide-small">
                 <span class="slogan__line1">Engage</span>
                 <br />
@@ -74,11 +78,18 @@
                 <br />
                 <span class="slogan__line3">Evolve</span>
               </div>
-              <p class="mb-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam assumenda ea quo
-                cupiditate facere deleniti fuga officia.</p>
+              <div class="slogan w3-hide-medium w3-hide-large">
+                <span class="slogan__line1">Engage</span>
+                <br/>
+                <span class="slogan__line1">Explore</span>
+                <br/>
+                <span class="slogan__line1">Evolve</span>
+              </div>
+            </div>
+            <div class="col-4">
+              <img class="w3-hide-small slogan__image" src="images/ev-lines.svg"/>
             </div>
           </div>
-
         </div>
       </div>
     </div>
