--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -107,7 +107,6 @@
           </div>
         </div>
         <div class="col-md-5 ml-auto">
-          <h3 class="section-sub-title">About Us</h3>
           <h2 class="section-title mb-3">Welcome To EarthVectors</h2>
           <p class="mb-4">The EarthVectors core team brings nearly 100 years of software engineering experience and 30
             years of experience in the healthcare domain.</p>
@@ -127,7 +126,6 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-12 text-center">
-          <h3 class="section-sub-title">Team</h3>
           <h2 class="section-title mb-3">Our Team</h2>
         </div>
       </div>
@@ -187,8 +185,7 @@
   <section class="values-section" id="values-section">
     <div class="container">
       <div class="row mb-5">
-        <div class="col-12">
-          <h3 class="section-sub-title">Values</h3>
+        <div class="col-12 text-center">
           <h2 class="section-title mb-3">Core Values</h2>
         </div>
       </div>
@@ -267,7 +264,6 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-12 text-center">
-          <h3 class="section-sub-title">Services</h3>
           <h2 class="section-title mb-3">Our Services</h2>
         </div>
       </div>
@@ -348,7 +344,6 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-12 text-center">
-          <h3 class="section-sub-title">Blog</h3>
           <h2 class="section-title mb-3">Our Blog Posts</h2>
         </div>
       </div>
@@ -384,7 +379,6 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col-12 text-center">
-          <h3 class="section-sub-title">Contact</h3>
           <h2 class="section-title mb-3">Contact Us</h2>
         </div>
       </div>
