--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -428,6 +428,8 @@
       </div>
     </div>
   </section>
+
+  <%= render "layouts/footer" %>
 </div> <!-- .site-wrap -->
 
 <script src="external/javascripts/jquery_plugins/popper.min.js"></script>
