--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,19 @@
-<div class="w3-container footer">
-  <div class="w3-row">
-    <div class="w3-col w3-center">
-      <img class="footer__image" src="images/ev-logo-stacked.svg"/>
-      <p>
-        780 Magnolia Street
-        <br/>
-        Denver CO, 80220
-      </p>
+<footer>
+  <div class="container">
+    <div class="row justify-content-center">
+      <img class="footer__image" src="images/ev-logo-stacked.svg" />
+    </div>
+    <div class="row justify-content-center">
+      <p>780 Magnolia Street Denver CO, 80220</p>
+    </div>
+    <div class="row justify-content-center">
+      <h5 class="footer-heading mb-4">Follow Us</h5>
+    </div>
+    <div class="row justify-content-center">
+      <a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+      <a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
+      <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+      <a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
     </div>
   </div>
-</div>
+</footer>
