--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -1,10 +1,11 @@
 .footer {
     color: #1b252d;
     background-color: #209d75;
-    padding: 64px 0;
+    justify-content: center;
+    /*padding: 64px 0;*/
 }
 
 .footer__image {
-    width: 120px;
-    height: 120px;
+    width: 15%;
+    height: 15%;
 }
