Add CoreValues callout image

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -18,7 +18,6 @@
 <!--  <link rel="stylesheet" href="stylesheets/section.css"/>-->
   <link rel="stylesheet" href="stylesheets/slogan.css"/>
 <!--  <link rel="stylesheet" href="stylesheets/values.css"/>-->
-<!--  <link rel="stylesheet" href="stylesheets/callout.css"/>-->
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
@@ -189,6 +188,7 @@
           <h2 class="section-title mb-3">Core Values</h2>
         </div>
       </div>
+
       <div class="row">
         <div class="col-md-6 col-lg-4">
           <div class=" box-with-humber">
@@ -255,6 +255,24 @@
           </div>
         </div>
 
+        <div class="col-md-6 col-lg-4">
+          <div class=" box-with-humber">
+            <h2 class="text-black">Another one</h2>
+            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium eos nulla qui
+              commodi consectetur beatae fugiat. Veniam iste rerum perferendis.</p>
+            <ul class="list-unstyled ul-check primary">
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+              <li>Lorem ipsum dolor sit amet.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="row justify-content-center" style="padding-bottom: 30px;">
+        <div class="col-md-3">
+          <img class="w3-hide-small callout__image" src="images/ev-group.svg"/>
+        </div>
       </div>
     </div>
   </section>
@@ -430,7 +448,7 @@
   </section>
 
   <%= render "layouts/footer" %>
-</div> <!-- .site-wrap -->
+</div>
 
 <script src="external/javascripts/jquery_plugins/popper.min.js"></script>
 <script src="external/javascripts/jquery_plugins/jquery.stellar.min.js"></script>
