Add more Team member placeholders

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -128,10 +128,11 @@
           <h2 class="section-title mb-3">Our Team</h2>
         </div>
       </div>
+
       <div class="row">
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
           <div class="person text-center">
-            <img src="external/images/person_2.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
+            <img src="external/images/person_2.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-2">
             <h3>John Rooster</h3>
             <p class="position text-muted">Co-Founder, President</p>
             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
@@ -147,7 +148,7 @@
         </div>
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
           <div class="person text-center">
-            <img src="external/images/person_3.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
+            <img src="external/images/person_3.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-2">
             <h3>Tom Sharp</h3>
             <p class="position text-muted">Co-Founder, COO</p>
             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
@@ -163,7 +164,7 @@
         </div>
         <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
           <div class="person text-center">
-            <img src="external/images/person_4.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-5">
+            <img src="external/images/person_4.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-2">
             <h3>Winston Hodson</h3>
             <p class="position text-muted">Marketing</p>
             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
@@ -178,6 +179,58 @@
           </div>
         </div>
       </div>
+
+      <div class="row" style="padding-top: 30px">
+        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
+          <div class="person text-center">
+            <img src="external/images/person_2.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-2">
+            <h3>John Rooster</h3>
+            <p class="position text-muted">Co-Founder, President</p>
+            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
+              quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore
+              suscipit inventore deserunt tenetur.</p>
+            <ul class="ul-social-circle">
+              <li><a href="#"><span class="icon-facebook"></span></a></li>
+              <li><a href="#"><span class="icon-twitter"></span></a></li>
+              <li><a href="#"><span class="icon-linkedin"></span></a></li>
+              <li><a href="#"><span class="icon-instagram"></span></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="200">
+          <div class="person text-center">
+            <img src="external/images/person_3.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-2">
+            <h3>Tom Sharp</h3>
+            <p class="position text-muted">Co-Founder, COO</p>
+            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
+              quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore
+              suscipit inventore deserunt tenetur.</p>
+            <ul class="ul-social-circle">
+              <li><a href="#"><span class="icon-facebook"></span></a></li>
+              <li><a href="#"><span class="icon-twitter"></span></a></li>
+              <li><a href="#"><span class="icon-linkedin"></span></a></li>
+              <li><a href="#"><span class="icon-instagram"></span></a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="300">
+          <div class="person text-center">
+            <img src="external/images/person_4.jpg" alt="Image" class="img-fluid rounded-circle w-50 mb-2">
+            <h3>Winston Hodson</h3>
+            <p class="position text-muted">Marketing</p>
+            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi at consequatur unde molestiae
+              quidem provident voluptatum deleniti quo iste error eos est praesentium distinctio cupiditate tempore
+              suscipit inventore deserunt tenetur.</p>
+            <ul class="ul-social-circle">
+              <li><a href="#"><span class="icon-facebook"></span></a></li>
+              <li><a href="#"><span class="icon-twitter"></span></a></li>
+              <li><a href="#"><span class="icon-linkedin"></span></a></li>
+              <li><a href="#"><span class="icon-instagram"></span></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
 
@@ -440,7 +493,6 @@
 
             <p class="mb-0 font-weight-bold">Email Address</p>
             <p class="mb-0"><a href="#">info@earthvectors.com</a></p>
-
           </div>
         </div>
       </div>
