--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <div class="row justify-content-center">
-      <img class="footer__image" src="images/ev-logo-stacked.svg" />
+      <img src="images/ev-logo-stacked.svg" />
     </div>
     <div class="row justify-content-center">
       <p>780 Magnolia Street Denver CO, 80220</p>
