--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,6 +4,9 @@
       <img src="images/ev-logo-stacked.svg" />
     </div>
     <div class="row justify-content-center">
+      <p>info@earthvectors.com</p>
+    </div>
+    <div class="row justify-content-center">
       <p>780 Magnolia Street Denver CO, 80220</p>
     </div>
     <div class="row justify-content-center">
