Update cover styling
-Remove Vector image
-Narrow cover overlay
-Bigify logo
-Center 3Es

--- a/public/external/stylesheets/css/style.css
+++ b/public/external/stylesheets/css/style.css
@@ -566,8 +566,8 @@ h1, h2, h3, h4, h5,
     bottom: -250px;
     width: 100%; }
   .site-blocks-cover, .site-blocks-cover > .container > .row {
-    min-height: 600px;
-    height: calc(100vh); }
+    /*min-height: 600px;*/
+    height: calc(50vh); }
   .site-blocks-cover.inner-page-cover, .site-blocks-cover.inner-page-cover > .container > .row {
     min-height: 400px;
     height: calc(20vh); }
