--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -11,9 +11,10 @@
   <link rel="stylesheet" href="external/stylesheets/css/bootstrap-datepicker.css">
   <link rel="stylesheet" href="external/stylesheets/css/aos.css">
   <link rel="stylesheet" href="external/stylesheets/css/style.css" />
-  <link rel="stylesheet" href="stylesheets/w3.css"/>
-  <link rel="stylesheet" href="stylesheets/colors.css"/>
-  <link rel="stylesheet" href="stylesheets/slogan.css"/>
+  <link rel="stylesheet" href="stylesheets/w3.css" />
+  <link rel="stylesheet" href="stylesheets/colors.css" />
+  <link rel="stylesheet" href="stylesheets/slogan.css" />
+  <link rel="stylesheet" href="stylesheets/nav.css" />
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
@@ -39,7 +40,6 @@
         </div>
         <div class="col-12 col-md-10 d-none d-xl-block">
           <nav class="site-navigation position-relative text-right" role="navigation">
-
             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
               <li><a href="#home-section" class="nav-link">Home</a></li>
               <li><a href="#about-section" class="nav-link">About Us</a></li>
@@ -65,7 +65,8 @@
     <div class="container">
       <div class="row align-items-center">
           <div class="row">
-            <div class="col-6">
+            <div class="col-md-7"></div>
+            <div class="col-md-1">
               <div class="slogan w3-hide-small">
                 <span class="slogan__line1">Engage</span>
                 <br />
@@ -81,9 +82,7 @@
                 <span class="slogan__line1">Evolve</span>
               </div>
             </div>
-            <div class="col-4">
-              <img class="w3-hide-small slogan__image" src="images/ev-lines.svg"/>
-            </div>
+            <div class="col-md-4"></div>
           </div>
         </div>
       </div>
@@ -241,7 +240,7 @@
       <div class="row">
         <div class="col-md-6 col-lg-4">
           <div class=" box-with-humber">
-            <h2 class="text-black">Agility</h2>
+            <h2 class="subsection-title">Agility</h2>
             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Et praesentium eos nulla qui
               commodi consectetur beatae fugiat. Veniam iste rerum perferendis.</p>
             <ul class="list-unstyled ul-check primary">
@@ -320,7 +319,7 @@
 
       <div class="row justify-content-center" style="padding-bottom: 30px;">
         <div class="col-md-3">
-          <img class="w3-hide-small callout__image" src="images/ev-group.svg"/>
+          <img class="w3-hide-small callout__image" src="images/ev-group.svg" />
         </div>
       </div>
     </div>
