Media query for mobile landscape cover text

--- a/app/assets/stylesheets/_site-blocks.scss
+++ b/app/assets/stylesheets/_site-blocks.scss
@@ -330,7 +330,7 @@
 }
 
 .site-block-tab {
-	.nav-item {
+	.   {
 		text-transform: uppercase;
 		font-size: $font-size-base - .2rem;
 		margin: 0 20px;
