--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="stylesheets/colors.css" />
   <link rel="stylesheet" href="stylesheets/slogan.css" />
   <link rel="stylesheet" href="stylesheets/nav.css" />
+  <link rel="stylesheet" href="stylesheets/content.css" />
   <link rel="stylesheet" href="stylesheets/footer.css" />
 </head>
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -62,7 +63,7 @@
   </header>
 
 
-  <div class="site-blocks-cover overlay slogan__overaly" data-aos="fade">
+  <div class="site-blocks-cover overlay slogan__overlay" data-aos="fade">
     <div class="container">
       <div class="row align-items-center">
           <div class="row">
@@ -319,9 +320,7 @@
       </div>
 
       <div class="row justify-content-center" style="padding-bottom: 30px;">
-        <div class="col-md-3">
-          <img class="w3-hide-small callout__image" src="images/ev-group.svg" />
-        </div>
+        <img class="callout__image" src="images/ev-group.svg" />
       </div>
     </div>
   </section>
